src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_all_status_icons.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════╗
║✓ 1: Completed task [api]                                 ║
║● 2: In progress task [ui]                                ║
║○ 3: Pending task [tests]                                 ║
║✗ 4: Blocked task [infra]                                 ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚══════════════════════════════════════════════════════════╝
