src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_component_and_deps.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════════════════════════╗
║✓ 1: Foundation layer [infrastructure]                                        ║
║● 2: Service layer [backend] deps: 1                                          ║
║○ 3: UI integration [frontend] deps: 1, 2                                     ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════╝
