src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_empty_tree.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close) ════════════════════════╗
║No tasks found                                  ║
║                                                ║
║                                                ║
║                                                ║
║                                                ║
║                                                ║
╚════════════════════════════════════════════════╝
