src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_flat_tree_3_tasks.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════╗
║✓ 1: First task [api]                                     ║
║● 2: Second task [ui]                                     ║
║○ 3: Third task [tests]                                   ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚══════════════════════════════════════════════════════════╝
