src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_hierarchy_5_levels.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════════════════════════╗
║1 Root Project                                                                ║
║  1.1 Module A                                                                ║
║    1.1.1 Feature X                                                           ║
║      1.1.1.1 Component Y                                                     ║
║        ● 1.1.1.1.1: Implementation detail [core]                             ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════╝
