src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_hierarchy_5_levels_narrow_width_60.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════╗
║1 Project                                                 ║
║  1.1 Mod A                                               ║
║    1.1.1 Feature                                         ║
║      1.1.1.1 Comp                                        ║
║        ✓ 1.1.1.1.1: Detail [core]                        ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚══════════════════════════════════════════════════════════╝
