src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_hierarchy_6_levels_with_siblings.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════════════════════════╗
║1 Root A                                                                      ║
║  1.1 Module 1                                                                ║
║    1.1.1 Feature 1                                                           ║
║      1.1.1.1 Component 1                                                     ║
║        1.1.1.1.1 Subcomponent 1                                              ║
║          ✓ 1.1.1.1.1.1: Final task [impl]                                    ║
║2 Root B                                                                      ║
║  ○ 2.1: Simple task [tests]                                                  ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════╝
