src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_narrow_width_30_component_and_deps.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ t╗
║✓ 1: Database [db]          ║
║○ 2: Backend API            ║
║[infrastructure] deps: 1, 3 ║
║● 3: Auth [security]        ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚════════════════════════════╝
