src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_narrow_width_30_hierarchy_3_levels.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ t╗
║1 E-commerce                ║
║  1.1 Auth module           ║
║    ✓ 1.1.1: Login [ui]     ║
║    ● 1.1.2: JWT validation ║
║[api] deps: 1.1.1           ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚════════════════════════════╝
