src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_narrow_width_30_long_task_name.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ t╗
║● 1: Very long task name    ║
║will overflow here!! [api]  ║
║                            ║
║                            ║
║                            ║
║                            ║
╚════════════════════════════╝
