src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_narrow_width_30_status_icons_visible.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ t╗
║✓ 1: Done task [api]        ║
║● 2: In progress [ui]       ║
║○ 3: Todo task [test]       ║
║✗ 4: Blocked [infra]        ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚════════════════════════════╝
